--- a/styles.css
+++ b/styles.css
@@ -275,6 +275,72 @@ header .head-contant video{
 .introduction .content .part4 li{
     margin-top:2px;
 }
+/*  */
+.demain{
+    background-color: #000;
+    padding: 30px 50px;
+    width: 100%;
+}
+.demain h2{
+    font-size: 51px;
+    text-align: center;
+    color: #fff;
+    margin-bottom:8px;
+}
+.demain .p1 h3{
+    color: #fff;
+    font-size: 32px;
+    margin-bottom:10px;
+    text-align: center;
+}
+.demain .p1 .learn{
+    width: 95%;
+    margin: 10px auto;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-gap: 10px;
+}
+
+.demain .p1 .learn .img{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background: black;
+}
+
+.demain .p1 .learn .img img{
+    width: 100%;
+    height:100%;
+}
+.demain .p1 .learn .img:hover img{
+    opacity: 0.1;
+}
+
+.demain .p1 .learn .img p{
+    position: absolute;
+    width: 400px;
+    margin-top: 30px;
+    text-align: center;
+    color: white;
+    line-height: 22px;
+    padding: 0 25px;
+    opacity: 0;
+    z-index: 5;
+}
+
+.demain .p1 .learn .img:hover p{
+    opacity: 1;
+}
+
+.demain .p1 .learn .img a{
+    position: absolute;
+    margin-top: 180px;
+    color: #000;
+    padding: 7px 25px;
+    text-decoration: none;
+    opacity: 0;
+    z-index: 5;
+}
 @media (max-width: 900px){
     header .head-contant{
         display: grid;
@@ -324,6 +390,13 @@ header .head-contant video{
         width:60%;
         margin: 3% 20%;
     }
+    .demain .p1 .learn{
+        grid-template-columns: 1fr 1fr;
+    }
+    .demain .p1 .learn .img p{
+        position: absolute;
+        width:250px;
+        font-size: small;}
 }
 @media (max-width: 600px){
     
@@ -342,5 +415,12 @@ header .head-contant video{
         grid-template-rows: 1fr 1fr;
         gap:5%;
         padding:50px 30px;
+    }
+    .demain .p1 .learn{
+        grid-template-columns: 1fr;
+    }
+    .demain .p1 .learn .img p{
+        position: absolute;
+        width:400px;
     }
 }
