--- a/styles.css
+++ b/styles.css
@@ -198,12 +198,7 @@ header .head-contant video{
 .introduction .content .part1 p{
     font-size:1.5rem;
 }
-.introduction .content  span{
-    font-size: larger;
-    color: #5757dd;
-    padding:2px;
-    font-weight:500;
-}
+
 .introduction .content .part2.introduction .content .part3{
     padding-top:5%;
 }
@@ -341,6 +336,395 @@ header .head-contant video{
     opacity: 0;
     z-index: 5;
 }
+
+.composant{
+    color: #fff;
+}
+.composant .title{
+    text-align: center;
+    background-color: #000;
+}
+.composant .title h2{
+    font-size:2rem;
+    margin-bottom:10px;
+}
+.composant .title h6{
+    padding:0 25%;
+    font-size:1rem;
+    font-weight: 200;
+    padding-bottom:3%;
+}
+.composant h3{
+    font-size:1.8rem;
+    padding-top:5px;
+}
+.composant .information{
+    display: grid;
+    grid-template-columns:1fr 1fr;
+    column-gap:12%;
+    padding-left:120px;
+    background-color: #000;
+    padding-bottom:50px;
+    padding-right:20px;
+}
+.composant .information .info1,
+.composant .information .info2,
+.composant .information .info3,
+.composant .information .info4,
+.composant .information .info5,
+.composant .information .info6,
+.composant .information .info7,
+.composant .information .info8{
+    position: relative;
+}
+.composant .information .info1::before{
+    position: absolute;
+    text-shadow: 5px 5px 10px #5757dd;
+    content:"1";
+    color: #5757dd;
+    font-weight:bolder;
+    top:50%;
+    transform: translateY(-50%);
+    font-size:7rem;
+    left:-80px;
+    opacity:0.6;
+}
+.composant .information .info2::before{
+    position: absolute;
+    text-shadow: 5px 5px 10px #5757dd;
+    content:"2";
+    color: #5757dd;
+    font-weight:bolder;
+    top:50%;
+    transform: translateY(-50%);
+    font-size:7rem;
+    left:-80px;
+    opacity:0.6;
+}
+.composant .information .info3::before{
+    position: absolute;
+    text-shadow: 5px 5px 10px #5757dd;
+    content:"3";
+    color: #5757dd;
+    font-weight:bolder;
+    top:50%;
+    transform: translateY(-50%);
+    font-size:7rem;
+    left:-80px;
+    opacity:0.6;
+}
+.composant .information .info4::before{
+    position: absolute;
+    text-shadow: 5px 5px 10px #5757dd;
+    content:"4";
+    color: #5757dd;
+    font-weight:bolder;
+    top:50%;
+    transform: translateY(-50%);
+    font-size:7rem;
+    left:-80px;
+    opacity:0.6;
+}
+.composant .information .info5::before{
+    position: absolute;
+    content:"5";
+    text-shadow: 5px 5px 10px #5757dd;
+    color: #5757dd;
+    font-weight:bolder;
+    top:50%;
+    transform: translateY(-50%);
+    font-size:7rem;
+    left:-80px;
+    opacity:0.6;
+}
+.composant .information .info6::before{
+    position: absolute;
+    text-shadow: 5px 5px 10px #5757dd;
+    content:"6";
+    color: #5757dd;
+    font-weight:bolder;
+    top:50%;
+    transform: translateY(-50%);
+    font-size:7rem;
+    opacity:0.6;
+    left:-80px;
+}
+.composant .information .info7::before{
+    position: absolute;
+    text-shadow: 5px 5px 10px #5757dd;
+    content:"7";
+    color: #5757dd;
+    font-weight:bolder;
+    top:50%;
+    transform: translateY(-50%);
+    font-size:7rem;
+    opacity:0.6;
+    left:-80px;
+}
+.composant .information .info8::before{
+    position: absolute;
+    content:"8";
+    color: #5757dd;
+    font-weight:bolder;
+    text-shadow: 5px 5px 10px #5757dd;
+    top:50%;
+    transform: translateY(-50%);
+    font-size:7rem;
+    left:-80px;
+    opacity:0.6;
+}
+.composant .information h3{
+    color: #5252e9;
+    font-weight: bold;
+}
+.fon{
+    padding:0 100px;
+    background-color: #000;
+    color: #fff;
+    
+}
+.fon .title h2{
+    font-size: xx-large;
+    text-align: center;
+    margin-bottom:2%;
+}
+.fon .content img,.fon .content video{
+    width:80%;
+    border-radius:5%;
+    margin:3% 2%;
+    height:80%;
+}
+.fon .content div{
+    display: grid;
+    grid-template-columns: 1fr 50%;
+    gap:10px;
+    align-items: center;
+    font-size:18px;
+    transition:0.6s ease;
+}
+.fon .content div:hover{
+    font-size:21px;
+}
+.programmer{
+    min-height: 100vh;
+    background-color: #000;
+    padding:30px 100px;
+    color: #fff;
+}
+.programmer .title,
+.Securite h2{
+    text-align: center;
+}
+.programmer .title h2,
+.Securite h2{
+    font-size:2rem;
+}
+.programmer .title p{
+    font-size: large;
+    padding:0 80px;
+    margin-bottom:5%;
+}
+.programmer .part1 p,
+.programmer .part2 p{
+    font-size: 21px;
+    margin-bottom: 2%;
+    position: relative;
+}
+.programmer .part1 p::before
+,.programmer .part2 p::before{
+    position: absolute;
+    content:"->";
+    font-size: 21px;
+    font-weight: 800;
+    left:-3%;
+    color:#5252e9;
+}
+.programmer .part1 p:hover,
+.programmer .part2 p:hover{
+    font-size: 28px;
+}
+.programmer .part1 div{
+    display: grid;
+    grid-template-columns:1fr 1fr 1fr 1fr;
+    gap:2%;
+}
+.programmer .part1 div i{
+    font-size:10rem;
+}
+.programmer .part1 div img{
+    width:60%;
+}
+.programmer .part1 div img:hover,
+.programmer .part1 div i:hover{
+    transform: scale(1.2);
+}
+
+.programmer .part1 .programmation{
+    display: grid;
+    grid-template-columns:1fr 1fr 1fr;
+    gap:1%;
+}
+.programmer .part1 .programmation div{
+    display:grid;
+    grid-template-columns:1fr;
+}
+.programmer .part1 .programmation h4{
+    font-size: large;
+}
+.programmer .part1 .programmation div div{
+    display:grid;
+    grid-template-columns:1fr 1fr;
+    align-items:center;
+}
+.programmer .part1 .programmation div div img{
+    width:100%;
+}
+.programmer .part2 ul li{
+    margin-bottom:1%;
+    font-size: 20px;
+}
+.programmer .part2 ul li:hover{
+    font-size: 25px;
+}
+.programmer .part2 ul li ul li{
+    margin:1% 0;
+    padding-left:3%;
+    position: relative;
+    font-size:18px;
+}
+.programmer .part2 ul li ul li::before{
+    content:"*";
+    font-size:25px;
+    position: absolute;
+    left:1%;
+    top:50%;
+    transform: translateY(-50%);
+    color: #5252e9;
+}
+.programmer .part2 ul li ul li:hover{
+    font-size: 20px;
+}
+.Securite{
+    min-height: 100vh;
+    background-color: #000;
+    padding:50px 100px;
+    color: #fff;
+}
+.Securite p{
+    font-size: 21px;
+    margin:2% 0;
+}
+.Securite img{
+    width:98%;
+    padding:0 1%;
+}
+.Securite img:hover{
+    transform: scale(1.1);
+}
+.Securite .content div{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    margin-bottom:2%;
+}
+.Securite .content div img
+,.Securite .content div video{
+    width:50%;
+}
+
+.Securite .conclusion video{
+    width:100%;
+}
+/* app */
+.apps{
+    color: #fff;
+    background-color: #000;
+    min-height: 100vh;
+    padding:50px 80px;
+    position: relative;
+}
+.apps h2{
+    font-size:2rem;
+    text-align: center;
+}
+.apps .title{
+    margin:2% 0;
+    display: grid;
+    grid-template-columns:1fr 1fr;
+    gap:2%;
+}
+.apps .title p{
+    font-size:21px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.apps .title img{
+    width:95%;
+}
+.apps .conclusion p{
+    font-size:21px;
+}
+.apps .content{
+    perspective:800px;
+    display: grid;
+    grid-template-columns:1fr 1fr 1fr;
+    gap:2%;
+    margin-bottom:3%;
+}
+.apps .content .app{
+    position: relative;
+    height:500px;
+    transform-style:preserve-3d;
+    transition:0.5s;
+    transform-origin:center;
+}
+.apps .content .app:hover{
+    transform:rotateY(-180deg) ;
+}
+.apps .content .app .img,
+.apps .content .app .info{
+    position: absolute;
+    width:100%;
+    height:100%;
+    color: white;
+    backface-visibility: hidden;
+}
+.apps .content .app .img img{
+    width:100%;
+    height:100%;
+    object-fit: cover;
+    position: absolute;
+}
+.apps .content .app .img h4{
+    width:100%;
+    position: absolute;
+    bottom:0;
+    height:10%;
+    background-color:rgba(0,0,0, 0.5);
+    color: #fff;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: x-large;
+}
+.info{
+    transform:rotateY(180deg);
+    background-color:rgba(255,255,255, 0.4);
+    padding:50px 30px;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+}
+.info h4{
+    font-size: 2rem;
+    text-align: center;
+    margin-bottom: 5%;
+}
+.info p{
+    font-size: large;
+} 
+
 @media (max-width: 900px){
     header .head-contant{
         display: grid;
@@ -397,7 +781,74 @@ header .head-contant video{
         position: absolute;
         width:250px;
         font-size: small;}
-}
+        .composant .information{
+            grid-template-columns:1fr;
+            gap:2%;
+            padding-bottom:130px;
+        }
+        .fon{
+            padding:0 10px 0 50px;
+        }
+        .fon .content div{
+            grid-template-columns: 1fr;
+            gap:10px;
+        }
+        .fon .content div img{
+            width:100%;
+        }
+        .programmer{
+            padding:30px 50px;
+        }
+        .programmer .title h2
+        ,.Securite h2{
+            font-size: 1.5rem;
+            margin-bottom: 2%;
+        } 
+        .programmer .title p{
+            padding:0;
+        } 
+        .programmer .part1 p::before
+        ,.programmer .part2 p::before{
+            left:-5%;
+        }
+        .programmer .part1 div{
+            grid-template-columns:1fr 1fr;
+            margin-bottom: 2%;
+        }
+        .programmer .part1 .programmation{
+            grid-template-columns:1fr ;
+        }
+        .programmer .part1 .programmation h4{
+            font-size: larger;
+        }
+        .programmer .part2 ul li ul li::before{
+            left:0;
+        }
+        .Securite{
+            padding:0 50px;
+        }
+        .Securite .content div{
+            flex-direction: column;
+        }
+        .Securite .content div img,
+        .Securite .content div video{
+            width:100%;
+            margin:1% 0;
+        }
+        .apps .content{
+            grid-template-columns:1fr 1fr;
+            margin-bottom:16%;
+        }
+        .apps {
+            padding:0 50px;
+        }
+        .apps .title{
+            grid-template-columns:1fr;
+        }
+        .apps .title img{
+            display: none;
+        }
+    }
 @media (max-width: 600px){
     
     .contenu .content ul li{
@@ -421,6 +872,31 @@ header .head-contant video{
     }
     .demain .p1 .learn .img p{
         position: absolute;
-        width:400px;
+        width:80%;
+    }
+    .composant .title h6{
+        padding:0;
+    }
+    .composant .information{
+        grid-template-columns:1fr;
+    }
+    .programmer .part1 p::before
+    ,.programmer .part2 p::before{
+        left:-8%;
+    }
+    .programmer .part2 ul li ul li::before{
+        left: -2%;
+    }
+    .programmer .part1 div {
+        grid-template-columns: 1fr 1fr;
+        gap:1%;
+    }
+    .Securite{
+        padding:0 30px;
+    }
+    .apps .content{
+        grid-template-columns:1fr;
+        gap:0.5%;
+        margin-bottom:80%;
     }
 }
